@@ -1,5 +1,5 @@
 /* Retrieve event.
-   Copyright (C) 1999, 2001 Free Software Foundation, Inc.
+   Copyright (C) 1999, 2001, 2002 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Ulrich Drepper <drepper@cygnus.com>, 1999.
 
@@ -22,6 +22,7 @@
 #include <string.h>
 
 #include "thread_dbP.h"
+#include <linuxthreads/internals.h>
 
 
 td_err_e
